--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "eslint": "^7.11.0",
     "node-sass": "~5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "eslint": "^7.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
