--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "letmeask",
+  "name": "VXTel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "eslint": "^7.11.0",
     "node-sass": "~5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "eslint": "^7.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
